--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ Colors used:
 Primary Color (Blue): #05676e
 Secondary Color (Green): #489c79
 */
-a {color: ff7f50;
+a {
+    color: #ff7f50;
     text-decoration: none;
 }
 a:hover,
@@ -28,12 +29,12 @@ img {
 </head>
 
 body {
-    background-color: #lightgrey
+    background-color: lightgrey;
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     font-weight: 300; 
-    line-weight: 1.6; 
-    color: #4a4a4a"
+    line-height: 1.6; 
+    color: #4a4a4a;
 }
 
 h1, h2, h3, h4 {
@@ -70,13 +71,13 @@ h4 {
     transition: 0.2s opacity;
 }
 .button:hover {
-    opacity: 0.8
+    opacity: 0.8;
     text-decoration: none;
 }
 
 .button.contract {
     background-color: transparent;
-    color: #ff7f50
+    color: #ff7f50;
     text-transform: uppercase;
     border: 2px solid #ff7f50;
 }
@@ -92,15 +93,18 @@ h4 {
     padding: 0 15px;
 }
 
-.row [
+.row {
     margin: 25px 0; 
-]
+}
 
-#work .row { padding-bottom: 25px; border-bottom: 1px solid #4a4a4a; }
+#work .row { 
+    padding-bottom: 25px; 
+    border-bottom: 1px solid #4a4a4a; 
+}
 
 #hero h1 {
     text-align: center; 
-    background-color: #ffe4c4
+    background-color: #ffe4c4;
     margin: 0;
     padding: 0.67em 0;
 }
@@ -121,16 +125,14 @@ nav > ul > li > a:visited {
     list-style-type: none;
     padding: 0 15px;
     display: inline-block;
-    width: 100%
     text-transform: uppercase;
     font-weight: 700;
     color: #4a4a4a
 }
 
-css-box-shadow{
-	/*start ------------*/
-	width: [object Object]px; 
-	height: [object Object]px; 
+css-box-shadow {
+	width: 300px; 
+	height: 300px; 
 	background: #F8F8F8; 
 	border: solid #BDBDBD 1px; 
 	box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5)  ; 
