--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,9 @@ h4 {
 
 /* start of exercise 1.7 */
 /*Layout Styling */
+
+box-sizing: border-box;
+
 .container {
     padding: 0 15px;
 }
@@ -114,10 +117,10 @@ h4 {
 }
 
 header {
-    background-color: #ffe4c4;
+    background-color: #0567e0;
     text-align: center;
-    padding: 10px 0;
-    position: fixed;
+    padding: 20px 0;
+    position: relative;
     display: inline-block;
 }
 
@@ -129,6 +132,7 @@ nav > ul > li > a:visited {
     font-weight: 700;
     color: #4a4a4a
 }
+
 
 css-box-shadow {
 	width: 300px; 
