--- a/css/style.css
+++ b/css/style.css
@@ -143,3 +143,61 @@ css-box-shadow {
 	-webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5)  ; 
 	-moz-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5)  ; 
 }
+
+/*=========================
+Medium devices (640px and larger)
+=========================== */
+@media only screen and (min-width: 640px) {
+    header {
+        text-align: unset;
+        padding: 20px 0 13px;
+    }
+    nav {
+        width:auto;
+        float: right;
+        margin-top: 4px;
+    }
+    main {
+        padding: 99px;
+    }
+    #hero span {
+        display: block;
+        text-align: center;
+    }
+    body {
+        font-size: 16px;
+    }
+    .col-md-6 {
+        width: 50%
+    }
+    .row:: after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+    #about-page h3 { margin-top: 0;}
+}
+/*==========================
+Large devices (1024px or larger)
+============================ */
+@media only screen and (min-width: 1024px) {
+    .col-lg-7 {
+        width: 75%
+    }
+}
+/*===========================
+X-large devices (1440px or larger)
+============================= */
+@media only screen and (min-width: 1440px) {
+}
+/*============================
+Extra-large devices (1920px or larger)
+============================== */
+@media only screen and (min-width: 1920px) {
+}
+
+.container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: autho;
+}
