--- a/css/style.css
+++ b/css/style.css
@@ -199,5 +199,5 @@ Extra-large devices (1920px or larger)
 .container {
     max-width: 1200px;
     margin-left: auto;
-    margin-right: autho;
+    margin-right: autho;4
 }
