--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ Primary Color (Blue): #05676e
 Secondary Color (Green): #489c79
 */
 
+
 /* Apply box-sizing to all elements */
 * {
     box-sizing: border-box;
@@ -123,22 +124,54 @@ h4 {
 /* Header styling */
 header {
     background-color: #ffe4c4;
-    text-align: center;
-    padding: 20px 0;
-    display: flex;
+    padding: 10px 0 4px;
+    display: fixed;
     justify-content: space-between;
     align-items: center;
     position: relative;
     width: 100%;
+    main {
+    padding-top: 56px;
+    }
 }
 
+/*header hamburger menu base code (others in media query)*/ 
+.navtoggle, .navtoggle.responsive {
+    position: relative;
+  }
+  .navtoggle li .icon {
+    position: absolute;
+    right: 0;
+    top: 2px;
+    font-size: 20px;
+    padding-right: 0;
+  }
+
 /* Navigation styling */
+.navtoggle.responsive nav {
+    padding: 24px 0 0;
+  }
+  .navtoggle.responsive li  {
+    display: block;
+    padding: 10px 0;
+    border-top: 1px solid rgba(255,127,80,0.5);
+  }
+  
+  .navtoggle.responsive li:last-child  {
+    padding: 0 0 10px;
+  }
+
 nav > ul {
     list-style-type: none;
     padding: 0;
-    display: flex;
+    display: fixed;
     justify-content: center;
+    margin: ul {
+        margin: 1em 0;
+    }
 }
+.contact 
+onclick="menuToggle()"
 
 nav > ul > li {
     margin: 0 15px;
@@ -198,7 +231,7 @@ nav > ul > li > a:hover {
 }
 
 /*medium devices*/
-@media only screen and (min-width: 640px) {
+@media only screen and (min-width: 641px) {
     header {
         text-align: left;
         padding: 20px 0 13px;
@@ -206,11 +239,17 @@ nav > ul > li > a:hover {
     nav {
         float: right;
     }
+    nav > ul > li {
+        display: inline-block
+    }
 
     #hero span {
         display: block;
         text-align: center;
     }
+    .navtoggle li:not(:last-child) {
+        display: inline-block;
+      }
 }
 
 /* Large devices (1024px or larger) */
@@ -222,6 +261,14 @@ nav > ul > li > a:hover {
         width: 48%;
         margin: 1%;
     }
+    /*adding to the larger devices that won't have a menu*/
+    nav > ul > li {
+        display: inline-block
+    }
+    /*navigation menu icon */
+.navtoggle li:last-child {
+    display: none;
+  }
 }
 
 /* X-large devices (1440px or larger) */
@@ -230,11 +277,16 @@ nav > ul > li > a:hover {
         width: 48%;
         margin: 1%;
     }
+    nav > ul > li {
+        display: inline-block
+    }
+    /*navigation menu icon */
+.navtoggle li:last-child {
+    display: none;
+  }
 }
 
-/* Extra-large devices (1920px or larger) */
-@media only screen and (min-width: 1920px) {
-    .col-2 {
-        width: 48%;
-    }
-}
+/*items on a list */
+var list = $("ul");
+var listItems = list.find("li");
+listItems.hide();
