--- a/css/style.css
+++ b/css/style.css
@@ -4,47 +4,9 @@ Primary Color (Blue): #05676e
 Secondary Color (Green): #489c79
 */
 
-
 /* Apply box-sizing to all elements */
 * {
     box-sizing: border-box;
-}
-/*animation*/
-@keyframes color-change {
-    0% {fill: #edc655;}
-    50% {fill: #f76414;}
-    100% {fill: #f76414;}
-}
-@keyframes cloud-move {
-    from {transform: translate(0px, 0px);}to {transform: translate(200px, 50px);}
-}
-@keyframes cloud-move-reverse {
-    from {transform: translate(446px, 48px);}
-    to {transform: translate(100px, 48px);}
-}
-
-.tree {
-    animation: color-change 4s infinite alternate linear;
-}
-
-.cloud-front {
-    animation: cloud-move 30s infinite alternate linear;
-}
-
-.cloud-back {
-    animation: cloud-move-reverse 34s infinite alternate linear;
-}
-
-/* Image styling */
-img {
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-}
-
-.wellwise-circle-logo {
-    max-width: 200px;  
-    height: auto;
 }
 
 /* Body styling */
@@ -81,6 +43,107 @@ h4 {
     font-weight: 400;
 }
 
+
+/*Header styling */
+header {
+    background-color: #ffe4c4;
+    padding: 10px 0 4px;
+    display: fixed;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    width: 100%;
+}
+
+nav > ul > li {
+    margin: 0 15px;
+}
+
+nav > ul > li > a {
+    font-weight: 700;
+    color: #4a4a4a;
+    text-transform: uppercase;
+    padding: 10px;
+    display: inline-block;
+    text-decoration: none;
+}
+
+nav > ul > li > a:hover {
+    color: #cc6540;
+    text-decoration: underline;
+}
+
+header img {
+    max-width: 150px;
+    height:auto;
+}
+
+
+/*animation for color change of tree*/
+@keyframes color-change {
+    0% { fill: #edc655; }
+    50% { fill: #f76414; }
+    100% { fill: #800080; }
+}
+.tree {
+    animation: color-change 4s infinite alternate linear;
+}
+
+/*animation for cloud movement*/
+@keyframes cloud-move {
+    from {transform: translateX(0px);}
+    to {transform: translateX(200px);}
+}
+@keyframes cloud-move-reverse {
+    from {transform: translate(446px, 48px);}
+    to {transform: translate(100px, 48px);}
+}
+.cloud-front {
+    animation: cloud-move 30s infinite alternate linear;
+}
+.cloud-back {
+    animation: cloud-move-reverse 34s infinite alternate linear;
+}
+----------------------------------
+/*2nd column for project 2*/
+#ski-animation-project {
+    background color:#05676e;
+    padding: 40px 0;
+    text-align: center;
+}
+#ski-animation-project h2 {
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+.clouds {
+    position: relative;
+    width: 100%;
+    top: 50px;
+}
+.tree {
+    position: fixed;
+    bottom: 50px;
+}
+
+.cloud-front {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+}
+-----------------------------------
+/* Image styling */
+img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+}
+
+.wellwise-circle-logo {
+    max-width: 200px;  
+    height: auto;
+}
+
+
 /* Button styling */
 .button {
     display: inline-block;
@@ -113,7 +176,6 @@ h4 {
     clear: both;
     display: table;
 }
-
 #hero h1 {
     text-align: center;
     background-color: #ffe4c4;
@@ -121,16 +183,6 @@ h4 {
     padding: 0.67em 0;
 }
 
-/* Header styling */
-header {
-    background-color: #ffe4c4;
-    padding: 10px 0 4px;
-    display: fixed;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    width: 100%;
-}
 
 /* Navigation styling */
 .navtoggle {
@@ -169,23 +221,6 @@ nav > ul {
 .contact 
 onclick="menuToggle()"
 
-nav > ul > li {
-    margin: 0 15px;
-}
-
-nav > ul > li > a {
-    font-weight: 700;
-    color: #4a4a4a;
-    text-transform: uppercase;
-    padding: 10px;
-    display: inline-block;
-    text-decoration: none;
-}
-
-nav > ul > li > a:hover {
-    color: #cc6540;
-    text-decoration: underline;
-}
 
 /* 2-column layout */
 .col-2 {
