--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ h4 {
 header {
     background-color: #ffe4c4;
     padding: 10px 0 4px;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     position: fixed;
     width: 100%;
@@ -56,6 +56,11 @@ header {
 
 nav > ul > li {
     margin: 0 15px;
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    margin: 0;
 }
 
 nav > ul > li > a {
@@ -153,7 +158,7 @@ section {
     text-align: center;
 }
 #ski-animation-project h2 {
-    font-size: 2em;
+    font-size: 1.5em;
     margin-bottom: 20px;
 }
 
@@ -279,7 +284,7 @@ nav > ul {
 /*media queries*/
 
 /*mobile devices*/
-@media only screen and (min-width: 640px) {
+@media only screen and (max-width: 640px) {
     header {
         text-align: left;
         padding: 20px 0 13px;
@@ -321,7 +326,7 @@ nav > ul {
         padding: 20px 50px;
     }
     .col-lg-7 {
-        width: 75%;
+        width:75%;
     }
     .col-2 {
         width: 48%;
