--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ nav>ul>li>a {
     font-weight: 700;
     color: #4a4a4a;
     text-transform: uppercase;
-    padding: 10px;
+    padding: 10px; 
     display: inline-block;
     text-decoration: none;
 }
@@ -251,8 +251,9 @@ nav>ul {
 }
 
 .social-icon {
-    height: 75px;
-    width: 75px;
+    height: 50px;
+    width: 50px;
+    margin-top: 10px;
 }
 
 /*media queries-- gives conditions, overrides everything else that applies all the time */
@@ -345,40 +346,40 @@ nav>ul {
 
 /* Button styling & transition*/
 
-.resume-button:active {
-    .button {
+.resume-button {
         display: inline-block;
-        background-color: #ff7f50;
-        color: #ff7f50;
+        background-color: #be6444;
+        color: #ffffff;
         font-weight: 400;
         padding: 10px;
         border-radius: 3px;
         border-bottom: 2px solid #994c30;
         transition: 0.2s opacity;
     }
-}
 
-.read-more-button:active {
-    .button {
+.read-more-button {
         display: inline-block;
-        background-color: #ff7f50;
-        color: #ff7f50;
+        background-color: #be6444;
+        color: #ffffff;
         font-weight: 400;
         padding: 10px;
         border-radius: 3px;
-        border-bottom: 2px solid #994c30;
+        border-bottom: 2px solid #be6444;
         transition: 0.2s opacity;
     }
-}
 
-.email-button:active {
-    background-color: transparent;
-    color: #ff7f50;
+.email-button {
+    background-color: #be6444;
+    color: #ffffff;
+    font-weight: 400;
+    padding: 8px;
+    border-radius: 3px;
+    transition: 0.2 opacity;
     text-transform: uppercase;
-    border: 2px solid #ff7f50;
+    border-bottom: 2px solid #be6444;
 }
 
 .email-button:hover {
-    background-color: #ff7f50;
+    background-color: #be6444;
     color: #ffffff
 }
